--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shall-i",
+  "description": "The app for indecisiveness",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -46,6 +47,5 @@
     "typescript": "^4.3.5",
     "vue-jest": "^5.0.0-0",
     "vue-loader-v16": "npm:vue-loader@^16.1.0"
-  },
-  "description": "An Ionic project"
+  }
 }
